Cambios en sections del main

--- a/PLP3-AA9/index.html
+++ b/PLP3-AA9/index.html
@@ -33,6 +33,9 @@
     </header>
 
     <main class="main-container">
+
+        <aside class="aside-container">i am on the side</aside>
+
         <section class="section-articles1">
             <article class="article1">
                 <img src="./images/lorem.png" class="article1-image">
@@ -73,20 +76,96 @@
             </div>
         </figure>
 
-        <aside class="aside-container">i am on the side</aside>
-
         <section class="recent-posts">
-            <articles>a</articles>
-            <articles>b</articles>
-            <articles>c</articles>
-            <articles>d</articles>
-            <articles>e</articles>
-            <articles>f</articles>
+            <h2 class="recent-posts-title"> RECENT POSTS</h2>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
         </section>
+
+        <nav class="nav-pages">
+            <div class="nav-pages-prev">
+                <p>PREV</p>
+            </div>
+            <ul class="nav-pages-numbers">
+                <li>1.</li>
+                <li>2.</li>
+                <li>3.</li>
+                <li>4.</li>
+            </ul>
+            <div class="nav-pages-next">
+                <p>PREV</p>
+            </div>
+        </nav>
 
         <section class="summary">
 
         </section>
+
+
     </main>
 
     <footer class="footer-container">
