Cambios en Aside & Renombramiento de imágenes

--- a/PLP3-AA9/index.html
+++ b/PLP3-AA9/index.html
@@ -34,32 +34,167 @@
 
     <main class="main-container">
 
-        <aside class="aside-container">i am on the side</aside>
+        <aside class="aside-container">
+            <section class="aside-popular-articles">
+                <h2 class="aside-title">POPULAR ARTICLES</h2>
+                <ol class="aside-popular-articles-list">
+                    <li>
+                        <article class="aside-popular-articles-article">
+                            <img src="./images/lorem.png" class="article-image">
+                            <div class="article-text">
+                                <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="aside-popular-articles-article">
+                            <img src="./images/lorem.png" class="article-image">
+                            <div class="article-text">
+                                <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="aside-popular-articles-article">
+                            <img src="./images/lorem.png" class="article-image">
+                            <div class="article-text">
+                                <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="aside-popular-articles-article">
+                            <img src="./images/lorem.png" class="article-image">
+                            <div class="article-text">
+                                <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="aside-popular-articles-article">
+                            <img src="./images/lorem.png" class="article-image">
+                            <div class="article-text">
+                                <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
+                            </div>
+                        </article>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="aside-search">
+                <h2 class="aside-search-title">SEARCH</h2>
+                <form class="aside-search-form">
+                    <input type="text" placeholder="Search ..." id="aside-search-textinput">
+                    <button type="button" id="aside-search-button">SEARCH</button>
+                </form>
+            </section>
+
+            <section class="aside-trending">
+                <h2 class="aside-trending-title">TRENDING</h2>
+                <figure class="aside-trending-figure">
+                    <img src="./images/nor_again.png" class="article-image aside-trending-figure-image">
+                    <h3 class="aside-trending-figure-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet.</h>
+                </figure>
+                <article class="aside-trending-article">
+                    <img src="./images/lorem.png" class="article-image">
+                    <div class="article-text">
+                        <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="article-dateview">2 SEP,2023</p>
+                    </div>
+                </article>
+                <article class="aside-trending-article">
+                    <img src="./images/lorem.png" class="article-image">
+                    <div class="article-text">
+                        <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="article-dateview">2 SEP,2023</p>
+                    </div>
+                </article>
+                <article class="aside-trending-article">
+                    <img src="./images/lorem.png" class="article-image">
+                    <div class="article-text">
+                        <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="article-dateview">2 SEP,2023</p>
+                    </div>
+                </article>
+            </section>
+
+            <section class="aside-tagscloud1"></section>
+                <h2 class="aside-tagscloud1-title">TAGS CLOUD</h2>
+                <div class="aside-tagscloud1-boxes">
+                    <div class="tag-box">Businesss</div>
+                    <div class="tag-box">Technology</div>
+                    <div class="tag-box">Sport</div>
+                    <div class="tag-box">Art</div>
+                    <div class="tag-box">Lifestyle</div>
+                    <div class="tag-box">Three</div>
+                    <div class="tag-box">Photografy</div>
+                </div>
+                <div class="aside-tagscloud1-articles">
+                    <article class="aside-tagscloud1-article">
+                        <img src="./images/lorem.png" class="article-image">
+                        <div class="article-text">
+                            <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                            <p class="article-dateview">2 SEP,2023</p>
+                        </div>
+                    </article>
+                    <article class="aside-tagscloud1-article">
+                        <img src="./images/lorem.png" class="article-image">
+                        <div class="article-text">
+                            <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                            <p class="article-dateview">2 SEP,2023</p>
+                        </div>
+                    </article>
+                </div>
+
+            <section class="aside-tagscloud2">
+                <h2 class="aside-tagscloud2-title">TAGS CLOUD</h2>
+                <div class="aside-tagscloud2-boxes">
+                    <div class="tag-box">Businesss</div>
+                    <div class="tag-box">Technology</div>
+                    <div class="tag-box">Sport</div>
+                    <div class="tag-box">Art</div>
+                    <div class="tag-box">Lifestyle</div>
+                    <div class="tag-box">Three</div>
+                    <div class="tag-box">Photografy</div>
+                    <div class="tag-box">Lifestyle</div>
+                    <div class="tag-box">Art</div>
+                    <div class="tag-box">Education</div>
+                    <div class="tag-box">Social</div>
+                    <div class="tag-box">Three</div>
+                </div>
+            </section>
+
+        </aside>
 
         <section class="section-articles1">
             <article class="article1">
-                <img src="./images/lorem.png" class="article1-image">
+                <img src="./images/lorem.png" class="article-image article1-image">
                 <div class="article-text">
                     <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
                     <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
                 </div>
             </article>
             <article class="article1">
-                <img src="./images/lorem.png" class="article1-image">
+                <img src="./images/lorem.png" class="article-image article1-image">
                 <div class="article-text">
                     <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
                     <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
                 </div>
             </article>
             <article class="article1">
-                <img src="./images/lorem.png" class="article1-image">
+                <img src="./images/lorem.png" class="article-image article1-image">
                 <div class="article-text">
                     <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
                     <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
                 </div>
             </article>
             <article class="article1">
-                <img src="./images/lorem.png" class="article1-image">
+                <img src="./images/lorem.png" class="article-image article1-image">
                 <div class="article-text">
                     <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
                     <p class="article-dateview">2 SEP,2023 90 VIEWS</p>
@@ -84,7 +219,7 @@
                     <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
                     <div class="recent-post-article-detail">
                         <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-tags">POLITICS,NEWS</p>
                         <p class="recent-posts-article-dateview">18 SEP,2023</p>
                     </div>
                 </div>
@@ -95,7 +230,29 @@
                     <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
                     <div class="recent-post-article-detail">
                         <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-tags">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p id="recent-posts-article-author">Steven Job</p>
+                        <p id="recent-posts-article-tags">POLITICS,NEWS</p>
+                        <p id="recent-posts-article-dateview">18 SEP,2023</p>
+                    </div>
+                </div>
+            </article>
+            <article class="recent-posts-article">
+                <img src="./images/magna.png" class="recent-post-article-image">
+                <div class="recent-posts-article-text">
+                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
+                    <div class="recent-post-article-detail">
+                        <p class="recent-posts-article-author">Steven Job</p>
+                        <p class="recent-posts-article-tags">POLITICS,NEWS</p>
                         <p class="recent-posts-article-dateview">18 SEP,2023</p>
                     </div>
                 </div>
@@ -106,7 +263,7 @@
                     <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
                     <div class="recent-post-article-detail">
                         <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-tags">POLITICS,NEWS</p>
                         <p class="recent-posts-article-dateview">18 SEP,2023</p>
                     </div>
                 </div>
@@ -117,29 +274,7 @@
                     <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
                     <div class="recent-post-article-detail">
                         <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
-                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
-                    </div>
-                </div>
-            </article>
-            <article class="recent-posts-article">
-                <img src="./images/magna.png" class="recent-post-article-image">
-                <div class="recent-posts-article-text">
-                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
-                    <div class="recent-post-article-detail">
-                        <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
-                        <p class="recent-posts-article-dateview">18 SEP,2023</p>
-                    </div>
-                </div>
-            </article>
-            <article class="recent-posts-article">
-                <img src="./images/magna.png" class="recent-post-article-image">
-                <div class="recent-posts-article-text">
-                    <h3 class="recent-posts-article-title">Lorem ipsum dolor sit amet.</h3>
-                    <div class="recent-post-article-detail">
-                        <p class="recent-posts-article-author">Steven Job</p>
-                        <p class="recent-posts-article-category">POLITICS,NEWS</p>
+                        <p class="recent-posts-article-tags">POLITICS,NEWS</p>
                         <p class="recent-posts-article-dateview">18 SEP,2023</p>
                     </div>
                 </div>
