Cambios en main summary

--- a/PLP3-AA9/index.html
+++ b/PLP3-AA9/index.html
@@ -285,6 +285,7 @@
             <div class="nav-pages-prev">
                 <p>PREV</p>
             </div>
+
             <ul class="nav-pages-numbers">
                 <li>1.</li>
                 <li>2.</li>
@@ -297,7 +298,65 @@
         </nav>
 
         <section class="summary">
+            <div class="summary-mostcomments">
+                <h2 class="summary-mostcomments-title">MOST COMMENTS</h2>
+                <ol class="summary-mostcomments-body">
+                    <li><p class="summary-mostcomments-elements">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                    <li><p class="summary-mostcomments-elements">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                    <li><p class="summary-mostcomments-elements">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                    <li><p class="summary-mostcomments-elements">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                </ol>
+            </div>
 
+            <div class="summary-latest">
+                <h2 class="summary-latest-title">LATEST</h2>
+                <div class="summary-latest-body">
+                    <article class="summary-latest-article">
+                        <img src="./images/lorem.png" class="article-image summary-latest-article-image">
+                        <div class="article-text">
+                            <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="summary-latest-body">
+                    <article class="summary-latest-article">
+                        <img src="./images/lorem.png" class="article-image summary-latest-article-image">
+                        <div class="article-text">
+                            <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="summary-latest-body">
+                    <article class="summary-latest-article">
+                        <img src="./images/lorem.png" class="article-image summary-latest-article-image">
+                        <div class="article-text">
+                            <h3 class="article-title">Lorem ipsum dolor sit amet.</h3>
+                        </div>
+                    </article>
+                </div>
+            </div>
+    
+            <div class="summary-categories">
+                <h2 class="summary-categories-title">CATEGORIES</h2>
+                <ul class="summary-categories-body">
+                    <li>Business</li>
+                    <li>Entertainment</li>
+                    <li>Environment</li>
+                    <li>Healt</li>
+                    <li>Life style</li>
+                    <li>Politics</li>
+                    <li>Technology</li>
+                    <li>World</li>
+                </ul>
+            </div>
+
+            <div class="summary-instagram">
+                <h2 class="summary-instagram-title">INSTAGRAM</h2>
+                <div class="summary-instagram-image-container">
+                    <img src="./images/instagram.png" class="article-image">
+                </div>
+
+            </div>
         </section>
 
 
