Cambios en footer

--- a/PLP3-AA9/index.html
+++ b/PLP3-AA9/index.html
@@ -358,12 +358,12 @@
 
             </div>
         </section>
-
-
     </main>
 
     <footer class="footer-container">
-        Estoy abajito
+        <h1 class="helloworld-footer">HELLO WORLD</h1>
+        <img src="./images/footer_social_network.png" id="footer-socialnetwork-image">
+        <p>© Copyright 2023, All rights reserved. Design by Alithemes.com</p>
     </footer>
 </body>
 </html>
