Colores de fondos y bordes de prueba quitados

--- a/PLP3-AA9/index.html
+++ b/PLP3-AA9/index.html
@@ -9,10 +9,10 @@
 <body class="grid-container">
     <header class="header-container">
         <section class="header-section1">
-            <div id="more-header" style="background-color: burlywood;">MORE</div>
-            <div id="date-header" style="background-color: coral;">Friday, 6 January 2023</div>
-            <div id="social-header" style="background-color: burlywood;">Redes Sociales</div>
-            <div id="search-header" style="background-color: coral;">SEARCH</div>
+            <div id="more-header">MORE</div>
+            <div id="date-header">Friday, 6 January 2023</div>
+            <div id="social-header">Redes Sociales</div>
+            <div id="search-header">SEARCH</div>
         </section>
 
         <section class="header-section2">
